<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/user_list_item"
    android:layout_height="wrap_content"
    android:background="@color/deep_orange_100">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/user_image"
        android:layout_width="110dp"
        android:layout_height="150dp"
        android:src="@drawable/image_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/empty_name_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/user_surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_image"
        app:layout_constraintTop_toTopOf="@id/user_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/user_surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/empty_surname_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/user_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_image"
        app:layout_constraintTop_toBottomOf="@id/user_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/user_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/empty_phone_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/user_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_image"
        app:layout_constraintTop_toBottomOf="@id/user_surname" />

</androidx.constraintlayout.widget.ConstraintLayout>